tests/schemas/error/004_missing_struct_field_tag.fcp
version: "3"

struct S1 {
    field1 : u32,
}
